force-app/main/default/objects/Account/fields/LifeStage__c.field-meta.xml
<CustomField>
    <fullName>LifeStage__c</fullName>
    <label>LifeStage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Single</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>