force-app/main/default/objects/Account/fields/MissingMortgagePayments__c.field-meta.xml
<CustomField>
    <fullName>MissingMortgagePayments__c</fullName>
    <label>MissingMortgagePayments</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>