force-app/main/default/objects/Account/fields/RetentionTeam__c.field-meta.xml
<CustomField>
    <fullName>RetentionTeam__c</fullName>
    <label>RetentionTeam</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Engaged</fullName>
            </value>
            <value>
                <fullName>Engaged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>