force-app/main/default/objects/Account/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Churn__c</columns>
    <columns>Gender__c</columns>
    <columns>LifeStage__c</columns>
    <columns>MissingMortgagePayments__c</columns>
    <columns>RetentionTeam__c</columns>
    <columns>Sentiment__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>